# CodeForge-Agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.codeforge/: settings.json
codeforge_agent/: __init__.py  __main__.py  agent.py  audit.py  frontmatter.py  mcp_client.py  memory.py  project_profile.py  prompt.py  session.py  skills.py  subagent.py  tools.py  ui.py  verifier.py
docs/: architecture.md
tests/: test_project_workflow.py
